commit en mi rama development

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Desafío Branching</title>
+  <meta name="Bianca" content="Desafío Latam">
+  <meta name="description" content="Desafío Branching"/>
+  <meta name="keywords" content="Git y Github"/>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Space+Mono" rel="stylesheet">
+  <title>Desafío Branching</title>
 </head>
 <body>
   <div class="container">
     <h1>Ir a Github</h1>
-    <a href="https://github.com/">
-      <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
+    <a href="https://github.com/Biancadmsa">
+      <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2022/11/mandalorian-grogu-2863719.jpg?tf=1200x" alt="octocat">
     </a>
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
