agregando las 2 ramas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Bianca" content="Desafío Latam">
-  <meta name="description" content="Desafío Branching"/>
+  <meta name="description" content="Desafío de Branching"/>
   <meta name="keywords" content="Git y Github"/>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Space+Mono" rel="stylesheet">
